test/1.2/errors/T_ETREC.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

/// ERROR ETREC
struct list_item {
    int data;
    list_item next;
}

/// ERROR ETREC
struct foo {
    int data;
    bar next;
}
/// ERROR ETREC
struct bar {
    int data;
    foo next;
}

// no error. Used to be an error, which was bug 25178
typedef struct {
    fun f(fun x);
    fun vect v;
} fun;

// This is a type that makes sense (can be understood by a human), but it
// cannot be represented in C.
/// ERROR ETREC
typedef struct {
    Y *y;
} X;
/// ERROR ETREC
typedef X Y[2];
